# galois

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  test_galois.py
.github/workflows/: ci.yml  deploy-hf.yml
backend/: __init__.py  api.py  modelos.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/assets/: monodromia.ts
frontend/src/components/: CameraToggle.tsx  Header.tsx  LandingPage.tsx  LatticeView.tsx  Math.tsx  ModeSelector.tsx  PanelGrupo.tsx  PlanoAlpha.tsx  PlanoX.tsx  StatsPills.tsx  StauduharPage.tsx  SuperficieRiemann.tsx  Trayectorias3D.tsx  ViewToggle.tsx
frontend/src/galois/: complex.ts  continuacion.ts  lazos_aleatorios.ts  lazos_hauenstein.ts  monodromia.ts  polinomio.ts  proyeccion3d.ts  raices.ts  superficie_riemann.ts
galois/: __init__.py  continuacion.py  galois_objetivo.py  identificacion.py  monodromia.py  polinomio.py  raices.py  ramificacion.py  stauduhar.py
mockup/: empty.html  index.html  layout_A.html  layout_B.html
spike/: index.html  riemann.html
tests/: conftest.py  test_api.py  test_rendimiento.py  test_stauduhar.py
