[project]
name = "galois"
version = "0.1.0"
description = "Visualizador interactivo del grupo de Galois por monodromia"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "sympy>=1.12",
    "plotly>=5.20",
    "trame>=3.4",
    "trame-plotly>=3.0",
    "trame-vuetify>=2.4",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
